--- a/jupyter_practice.ipynb
+++ b/jupyter_practice.ipynb
@@ -6,7 +6,13 @@
    "id": "d3389452",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = 2\n",
+    "for i in range(5):\n",
+    "    print(x)\n",
+    "    time.sleep(1)\n",
+    "    x+=2"
+   ]
   }
  ],
  "metadata": {
