scores by school type

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3617,7 +3617,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "bedb056a",
+   "id": "ad79807a",
    "metadata": {},
    "outputs": [
     {
@@ -3644,7 +3644,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "970763e8",
+   "id": "f42ead33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3656,7 +3656,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "c0fb9350",
+   "id": "6c7e2263",
    "metadata": {},
    "outputs": [
     {
@@ -3994,7 +3994,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "e3a22432",
+   "id": "8c1f9d15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4013,7 +4013,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "708747c3",
+   "id": "96cde81d",
    "metadata": {},
    "outputs": [
     {
@@ -4039,7 +4039,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "1b2c73a0",
+   "id": "1db27c14",
    "metadata": {},
    "outputs": [
     {
@@ -4158,7 +4158,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "0760a727",
+   "id": "b12ccac5",
    "metadata": {},
    "outputs": [
     {
@@ -4280,7 +4280,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "99e996a1",
+   "id": "c32ef27f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4292,7 +4292,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "22605137",
+   "id": "2c55c3fd",
    "metadata": {},
    "outputs": [
     {
@@ -4456,7 +4456,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "573511bc",
+   "id": "b7e4b72a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4475,7 +4475,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "877e233b",
+   "id": "a8707ac8",
    "metadata": {},
    "outputs": [
     {
@@ -4577,7 +4577,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "b47e6f06",
+   "id": "07ca8740",
    "metadata": {},
    "outputs": [
     {
@@ -4682,10 +4682,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f7ab2a1",
+   "id": "756485cd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
   }
  ],
  "metadata": {
